Fixed dark mode

--- a/css/bony.css
+++ b/css/bony.css
@@ -87,7 +87,7 @@
 	included for future and an example of defining a different base 'theme'
 */
 @media screen and (prefers-color-scheme: dark) {
-	:html {
+	:root {
 		/* dark theme: light background, dark text, blue accent */
 		--theme-hue: 0;
 		/* black */
